--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sorosan-sdk/react": "^0.1.1",
     "@stellar/freighter-api": "^1.7.1",
+    "lucide-react": "^0.294.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
-    "soroban-client": "^1.0.0-beta.4"
+    "stellar-sdk": "^11.0.0-beta.6"
   },
   "devDependencies": {
     "@types/node": "^20",
