--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@sorosan-sdk/react": "^0.2.1",
     "@stellar/freighter-api": "^1.7.1",
+    "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.2",
     "react": "^18",
