--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sorosan-sdk/react": "^0.2.1",
+    "@sorosan-sdk/react": "^0.3.0",
     "@stellar/freighter-api": "^1.7.1",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
@@ -18,7 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
-    "stellar-sdk": "^11.0.0-beta.6"
+    "stellar-sdk": "^11.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
